SLING-12868 resolve some sonar warnings